# Rag-Chatbot

./: .gitignore  Cargo.toml
frontend/: streamlit.py
src/: confluence.rs  main.rs  open_ai_config.rs  qdrant_config.rs  qdrant_setup.rs
