[package]
name = "RAG-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
qdrant-client = "1.7.0"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tonic = "0.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
scraper = "0.18.1"
openai = "1.0.0-alpha.13"
